kubernetes/svjis-app.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: svjis-app
  namespace: svjis
  labels:
    app: svjis-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: svjis-app
  template:
    metadata:
      labels:
        app: svjis-app
    spec:
      containers:
      - name: svjis-app
        image: berk76/svjis-app:latest
        ports:
        - containerPort: 8080
