kubernetes/svjis-db.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: svjis-db-statefulset
spec:
  selector:
    matchLabels:
      app: svjis-db
  serviceName: svjis-db-service
  replicas: 1
  template:
    metadata:
      labels:
        app: svjis-db
    spec:
      containers:
      - name: svjis-db
        image: jacobalberty/firebird:3.0.7
        ports:
        - containerPort: 3050
          name: db
        volumeMounts:
        - name: db
          mountPath: /firebird
  volumeClaimTemplates:
  - metadata:
      name: db
    spec:
      accessModes: [ "ReadWriteOnce" ]
      resources:
        requests:
          storage: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: svjis-db-service
spec:
  selector:
    app: svjis-db
  type: ClusterIP
  ports:
    - protocol: TCP
      port: 3050
      targetPort: 3050
