kubernetes/svjis-loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: svjis-app-service
spec:
  selector:
    app: svjis-app
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
